# blitz

./: Cargo.toml  README.md  bacon.toml
public/: index.html
src/: lib.rs  main.rs
src/api/: agenda.rs  mod.rs
src/routes/: layout.rs  mod.rs
templates/: home.html  layout.html
