[package]
name = "blitz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
axum = "0.6.20"
color-eyre = "0.6.2"
serde = { version = "1.0.185", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "tls-rustls", "postgres"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
